--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 @media (prefers-reduced-motion: no-preference) {
